--- a/res/css/views/elements/_AccessibleButton.scss
+++ b/res/css/views/elements/_AccessibleButton.scss
@@ -15,6 +15,9 @@ limitations under the License.
 */
 
 .mx_AccessibleButton {
+    --AccessibleButton_hasKind-padding-block: 7px;
+    --AccessibleButton_hasKind-padding-inline: 18px;
+
     cursor: pointer;
 
     &.mx_AccessibleButton_disabled {
@@ -31,7 +34,7 @@ limitations under the License.
     }
 
     &.mx_AccessibleButton_hasKind {
-        padding: 7px 18px;
+        padding: var(--AccessibleButton_hasKind-padding-block) var(--AccessibleButton_hasKind-padding-inline);
         text-align: center;
         border-radius: 8px;
         display: inline-flex;
